
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Refactored modX::invokeEvent and modX::getEventMap to take advantage of new plugin event changes
- Adjusted the modPluginEvent model to reference the event name rather than id
- Added new model-based System Events to work more effectively in any context
- Removed deprecated system events
- Added tree_root_id setting that allows you to specify the start parent ID of the left Resource tree
- Fixed bug where User Settings could not be removed
- Enabled ability to set absolute path and placeholders for filemanager_path and rb_base_dir
- [#MODX-1791] modPackageBuilder::createPackage now forces lowercase package name to be more compatible across environments
- Sanity checks to prevent user from accidentally removing admin/resource access policies
- [#MODX-1860] Fixed bug where new password was being hidden too fast when changing user password
- Added proxy support to modRestCurlClient for Package Management
- Added a couple refactorings to modRestSockClient to prevent possible errors
- Consolidated user group create system events into one event, OnUserGroupCreate
- Fixed some various plugin event calls
- Fixed Plugin Event code to restrict groupname to a UI filter only, not in event caching; adjusted UI grid to support groupname in display
- Refactored file handling processors to use modFileHandler class with modFile and modDirectory derivative classes to abstract file system processing to abstract for multiple environments
- [#MODX-1789] Added extra checks in Package Management to make sure that the correct directories are created before using it. Will now prevent usage of PM if those directories do not exist or are not writable.