@@ -12,4 +12,4 @@
  * will allow chained and dependent execution of sequenced plugins or even sets
  * of nested plugins
  */
-class modEvent extends xPDOSimpleObject {}
+class modEvent extends xPDOObject {}
