@@ -23,6 +23,8 @@ $_lang['connector_ctx_removed'] = '';
 $_lang['connector_ctx_not_removed'] = 'Could not remove connector context.';
 $_lang['data_remove_error'] = 'Error removing data for class `%s`.';
 $_lang['data_remove_success'] = 'Successfully removed data from table for class `%s`.';
+$_lang['drop_column'] = 'Dropped column `%s` on table `%s`.';
+$_lang['drop_index'] = 'Dropped index `%s` on table `%s`.';
 $_lang['lexiconentry_createdon_null'] = 'Changed modLexiconEntry `createdon` to allow NULL.';
 $_lang['lexiconentry_focus_alter'] = 'Changed modLexiconEntry `focus` from VARCHAR(100) to INT(10).';
 $_lang['lexiconentry_focus_alter_int'] = 'Updated modLexiconEntry `focus` column data from string to new int foreign key from modLexiconTopic.';
